Casi todas las clases descargadas, funcion de fonemas hasta la ll

--- a/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
+++ b/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
@@ -25,6 +25,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "1. Fecha -> /f/e/ch/a/\n",
     "2. Libro -> /l/i/b/r/o\n",
@@ -47,16 +49,90 @@
     "19. Llorar -> /ll/o/r/a/r\n",
     "20. espantapajaro -> /e/s/p/a/n/t/a/p/a/j/a/r/o\n",
     "\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario de fonemas a numero\n",
+    "# Basados en: https://www.livingspanish.com/correspondencia-fonetica-grafia.htm\n",
+    "dic_fon = {\"/a/\":1, \"/b/\":2, \"/c/\":3, \"/ch/\":4, \"/d/\":5,\n",
+    "           \"/e/\":6, \"/f/\":7, \"/g/\":8, \"//\":9, \"/i/\":10,\n",
+    "           \"/j/\":11, \"/k/\":12, \"/l/\":13, \"/m/\":14, \"/n/\":15,\n",
+    "           \"/ñ/\":16, \"/o/\":17, \"/p/\":18, \"/rr/\":19, \"/s/\":20,\n",
+    "           \"/t/\":21, \"/u/\":22, \"/x/\":23, \"/y/\":24, \"/ll/\":25,\n",
+    "           \"/r/\":26\n",
+    "}\n",
+    "# El de h es sin espacio\n",
+    "#/rr/ y /r/ están diferenciado"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# falta desde \"ll\"\n",
+    "def get_fonemas(p):\n",
+    "    \"\"\"\n",
+    "    Devuelve una lista con los fonemas de la palara p\n",
+    "    \"\"\"\n",
+    "    fonemas = []\n",
+    "    vocales = {'a','e','i','o','u'}\n",
+    "    for i in range(len(p)):\n",
+    "        # Fonemas literales iguales a su letra\n",
+    "        if p[i] in {\"a\",\"b\",\"d\",\"e\",\"f\",\"i\",\"j\",\n",
+    "                    \"k\",\"m\",\"n\",\"ñ\",\"o\",\"p\",\n",
+    "                    \"s\",\"t\",\"u\",\"x\",\"y\"}:\n",
+    "            fonemas.append(dic_fon[\"/\"+p[i]+\"/\"])\n",
+    "        elif p[i] == 'v' or p[i]=='w':\n",
+    "            fonemas.append(dic_fon[\"/b/\"])\n",
+    "        elif i < len(p-1):\n",
+    "            # Para fonemas que dependen de letra de adelante\n",
+    "            if (p[i] == 'c' and p[i+1] in {'e','i'}) or (p[i] == \"z\" and p[i+1] in {'a','o','u'}):\n",
+    "                fonemas.append(dic_fon[\"/c/\"])\n",
+    "            elif p[i] == \"c\" and p[i+1] == \"h\":\n",
+    "                fonemas.append(dic_fon[\"/ch/\"])\n",
+    "            elif p[i] == \"g\" and ((p[i+1] in {'a','o','u'}) or (p[i+1] not in vocales)):\n",
+    "                fonemas.append(dic_fon[\"/g/\"])\n",
+    "            elif (p[i] == \"g\" and  p[i+1] in {'e','i'}) or (p[i] == \"j\"):\n",
+    "                fonemas.append(dic_fon[\"/j/\"])\n",
+    "            elif p[i] == \"c\" and ((p[i+1] in {'a','o','u'}) or (p[i+1] not in vocales)):\n",
+    "                fonemas.append(dic_fon[\"/k/\"])\n",
+    "        elif i < (len(p)-2):\n",
+    "            # Para fonemas que dependen de dos letras adelante\n",
+    "            if p[i] == \"q\" and p[i+1]==\"u\" and p[i+2] in {\"e\",\"i\"}:\n",
+    "                fonemas.append(dic_fon[\"/k/\"])\n",
+    "        elif p[i] == \"h\":\n",
+    "            if ((i > 0 and p[i-1] != \"c\") or (i==0):\n",
+    "                fonemas.append(dic_fon[\"//\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"hola\"\n",
+    "i = 0\n",
+    "True and True and False"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
