--- a/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
+++ b/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
@@ -48,6 +48,36 @@
     "18. Terremoto -> /t/e/rr/e/m/o/t/o\n",
     "19. Llorar -> /ll/o/r/a/r\n",
     "20. espantapajaro -> /e/s/p/a/n/t/a/p/a/j/a/r/o\n",
+    "\n",
+    "## Clasificacion de fonemas:\n",
+    "\n",
+    "1. /a/ -> a -> 1\n",
+    "2. /b/ -> b,v,w(depende) -> 2\n",
+    "3. /c/ -> c(ante e,i),z(ante a,o,u) -> 3\n",
+    "4. /ch/ -> ch -> 4\n",
+    "5. /d/ -> d ->5\n",
+    "6. /e/ -> e -> 6\n",
+    "7. /f/ -> f -> 8\n",
+    "9. /g/ -> g (ante a,o,u const), gu(ante e i) -> 9\n",
+    "10. // -> h -> 10\n",
+    "11. /i/ -> i,y -> 11\n",
+    "12. /j/ -> g(ante e,i) j(vocales) -> 12\n",
+    "13. /k/ -> c (ante a, o, u o consontante) qu (ante e, i), k -> 13\n",
+    "14. /l/ -> l ->14\n",
+    "15. /ll/ -> ll ->15\n",
+    "16. /m/ -> m -> 16\n",
+    "17. /n/ -> n ->17\n",
+    "18. /ñ/ -> ñ -> 18\n",
+    "19. /o/ -> o -> 19\n",
+    "20. /p/ ->p ->20\n",
+    "21. /r/-> r (arena) -> 21\n",
+    "22. /rr/-> (arriba) -> 22\n",
+    "23./s/ -> s -> 23\n",
+    "24. /t/ -> t -> 24\n",
+    "25. /u/ -> u -> 25\n",
+    "26. /x/ -> x -> 26\n",
+    "27. /y/ -> y -> 27\n",
+    "\n",
     "\n"
    ]
   },
@@ -114,24 +144,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named '_sounddevice_data'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sounddevice.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mOSError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'PortAudio library not found'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m     \u001b[0m_lib\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_ffi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdlopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_libname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: PortAudio library not found",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3742aeaf7bd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0msounddevice\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msignal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sounddevice.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     78\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m         \u001b[1;32mraise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 80\u001b[1;33m     \u001b[1;32mimport\u001b[0m \u001b[0m_sounddevice_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     81\u001b[0m     _libname = _os.path.join(\n\u001b[0;32m     82\u001b[0m         next(iter(_sounddevice_data.__path__)), 'portaudio-binaries', _libname)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named '_sounddevice_data'"
+     ]
     }
    ],
    "source": [
-    "s = \"hola\"\n",
-    "i = 0\n",
-    "True and True and False"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sounddevice as sd\n",
+    "import scipy as sc\n",
+    "from scipy import signal\n",
+    "from scipy.fft import fftshift\n",
+    "\n",
+    "import librosa\n",
+    "import librosa.display\n",
+    "\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "import soundfile as sf\n",
+    "import os"
    ]
   }
  ],
