--- a/Talleres/Taller I Reconocimiento de Habla-20210203/Speech Processing/Taller_1_NLP_JCRuiz_DanielRambaut/Taller_1_JuanCamiloRuiz_DanielRambaut_NLP.ipynb
+++ b/Talleres/Taller I Reconocimiento de Habla-20210203/Speech Processing/Taller_1_NLP_JCRuiz_DanielRambaut/Taller_1_JuanCamiloRuiz_DanielRambaut_NLP.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +60,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_aux, fs_aux = sf.read('output.wav') # leyendo el audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs_aux"
    ]
   },
   {
