--- a/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
+++ b/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
@@ -57,26 +57,26 @@
     "4. /ch/ -> ch -> 4\n",
     "5. /d/ -> d ->5\n",
     "6. /e/ -> e -> 6\n",
-    "7. /f/ -> f -> 8\n",
-    "9. /g/ -> g (ante a,o,u const), gu(ante e i) -> 9\n",
-    "10. // -> h -> 10\n",
-    "11. /i/ -> i,y -> 11\n",
-    "12. /j/ -> g(ante e,i) j(vocales) -> 12\n",
-    "13. /k/ -> c (ante a, o, u o consontante) qu (ante e, i), k -> 13\n",
-    "14. /l/ -> l ->14\n",
-    "15. /ll/ -> ll ->15\n",
-    "16. /m/ -> m -> 16\n",
-    "17. /n/ -> n ->17\n",
-    "18. /ñ/ -> ñ -> 18\n",
-    "19. /o/ -> o -> 19\n",
-    "20. /p/ ->p ->20\n",
-    "21. /r/-> r (arena) -> 21\n",
-    "22. /rr/-> (arriba) -> 22\n",
-    "23./s/ -> s -> 23\n",
-    "24. /t/ -> t -> 24\n",
-    "25. /u/ -> u -> 25\n",
-    "26. /x/ -> x -> 26\n",
-    "27. /y/ -> y -> 27\n",
+    "7. /f/ -> f -> 7\n",
+    "9. /g/ -> g (ante a,o,u const), gu(ante e i) -> 8\n",
+    "10. // -> h -> 9\n",
+    "11. /i/ -> i,y -> 10\n",
+    "12. /j/ -> g(ante e,i) j(vocales) -> 11\n",
+    "13. /k/ -> c (ante a, o, u o consontante) qu (ante e, i), k -> 12\n",
+    "14. /l/ -> l ->13\n",
+    "15. /ll/ -> ll ->14\n",
+    "16. /m/ -> m -> 15\n",
+    "17. /n/ -> n ->16\n",
+    "18. /ñ/ -> ñ -> 17\n",
+    "19. /o/ -> o -> 18\n",
+    "20. /p/ ->p ->19\n",
+    "21. /r/-> r (arena) -> 20\n",
+    "22. /rr/-> (arriba) -> 21\n",
+    "23. /s/ -> s -> 22\n",
+    "24. /t/ -> t -> 23\n",
+    "25. /u/ -> u -> 24\n",
+    "26. /x/ -> x -> 25\n",
+    "27. /y/ -> y -> 26\n",
     "\n",
     "\n"
    ]
@@ -696,6 +696,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Proceso para armar la matriz de transicion\n",
+    "\n",
+    "1. Hacer la codificacion para cada uno de los fonemas de las palabras.\n",
+    "2. Calcular el numero de ocurrencia de cada uno de los fonemas de las palabras.\n",
+    "3. Para cada uno de los 22 fonemas calcular la probabilidad condicional dada P(fonema actual | fonema anterior).\n",
+    "4. Verificar que la suma de valores en cada fila sea igual a 1.\n",
+    "5. Armar la matriz de transición de tamaño (22 $\\times$ 22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palabras_codificadas = [[7,6,4,1],[13,10,2,20,18],[13,1,19,10,3],[12,18,21,6,20],\n",
+    "                      [23,6,13,6,7,18,16,18],[19,24,6,20,23,1],[19,1,16,23,1,14,1],\n",
+    "                      [11,10,15,6,16,1],[21,6,8,13,1],[2,10,14,6,23,6,20,1],\n",
+    "                      [3,1,19,1,23,18],[11,1,15,18,16],[12,10,18,22,12,18],\n",
+    "                      [2,1,13,18,16,3,6,22,23,18],[15,24,20,3,10,6,13,1,8,18],\n",
+    "                      [15,24,4,1,4,18],[1,9,10,11,1,5,18],[23,6,21,6,15,18,23,18],\n",
+    "                      [14,18,20,1,20],[6,22,19,1,16,23,1,19,1,11,1,20,18]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 22,\n",
+       " 2: 3,\n",
+       " 3: 4,\n",
+       " 4: 3,\n",
+       " 5: 1,\n",
+       " 6: 14,\n",
+       " 7: 2,\n",
+       " 8: 2,\n",
+       " 9: 1,\n",
+       " 10: 7,\n",
+       " 11: 4,\n",
+       " 12: 3,\n",
+       " 13: 6,\n",
+       " 14: 3,\n",
+       " 15: 5,\n",
+       " 16: 6,\n",
+       " 17: 0,\n",
+       " 18: 17,\n",
+       " 19: 6,\n",
+       " 20: 8,\n",
+       " 21: 3,\n",
+       " 22: 3,\n",
+       " 23: 9,\n",
+       " 24: 3,\n",
+       " 25: 0,\n",
+       " 26: 0}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicc_countFon = {}\n",
+    "for i in range(1,27):\n",
+    "    ocurrencia = 0\n",
+    "    for j in palabras_codificadas:\n",
+    "        ocurrencia += j.count(i)\n",
+    "    dicc_countFon[i] = ocurrencia\n",
+    "dicc_countFon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMatrizTrans(palabras_codificadas, dicc_countFon):\n",
+    "    fonemas_pre = [f for f in dicc_countFon.keys ]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -720,29 +809,6 @@
     "plt.ylabel(\"Diferencia de frecuencias (Hz) con spectrograma\") # REVISAR\n",
     "plt.title(\"Diferencia de frecuencias con espectrograma\")\n",
     "plt.plot(fonemas[0]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.658446  , 0.5599627 , 0.77868551, 0.45300087, 0.53659154,\n",
-       "        0.04952372, 0.89065165, 0.60356201, 0.06010939, 0.29137802,\n",
-       "        0.61259428]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array = np.random.rand(1,11)\n",
-    "array"
    ]
   },
   {
