avances del proyecto

--- a/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
+++ b/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        " 'zapato.wav']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,13 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ahijado.wav': 6,\n",
+       "{'ahijado.wav': 7,\n",
        " 'balocesto.wav': 10,\n",
        " 'espantapajaro.wav': 13,\n",
        " 'jamon.wav': 5,\n",
@@ -192,22 +192,22 @@
        " 'zapato.wav': 6}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fonemas = [6,10,13,5,6,5,6,10,4,8,5,5,5,8,6,7,6,5,8,6]\n",
+    "cantidad_fonemas = [7,10,13,5,6,5,6,10,4,8,5,5,5,8,6,7,6,5,8,6]\n",
     "dicc = {}\n",
     "for idx,i in enumerate(nombres):\n",
-    "    dicc[i] = fonemas[idx]\n",
+    "    dicc[i] = cantidad_fonemas[idx]\n",
     "dicc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,18 +458,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[array([74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85]),\n",
-       "  array([86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97]),\n",
-       "  array([ 98,  99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109]),\n",
-       "  array([110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120]),\n",
-       "  array([121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131]),\n",
-       "  array([132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142])],\n",
+       "[[array([74, 75, 76, 77, 78, 79, 80, 81, 82, 83]),\n",
+       "  array([84, 85, 86, 87, 88, 89, 90, 91, 92, 93]),\n",
+       "  array([ 94,  95,  96,  97,  98,  99, 100, 101, 102, 103]),\n",
+       "  array([104, 105, 106, 107, 108, 109, 110, 111, 112, 113]),\n",
+       "  array([114, 115, 116, 117, 118, 119, 120, 121, 122, 123]),\n",
+       "  array([124, 125, 126, 127, 128, 129, 130, 131, 132, 133]),\n",
+       "  array([134, 135, 136, 137, 138, 139, 140, 141, 142])],\n",
        " [array([21, 22, 23, 24]),\n",
        "  array([25, 26, 27, 28]),\n",
        "  array([29, 30, 31, 32]),\n",
@@ -627,7 +628,7 @@
        "         224, 225, 226, 227, 228, 229, 230])]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +640,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121]),\n",
+       " array([122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132]),\n",
+       " array([133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143]),\n",
+       " array([144, 145, 146, 147, 148, 149, 150, 151, 152, 153])]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fonemas[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,16 +703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GaussianMixture(n_components=23, random_state=0)"
+       "GaussianMixture(n_components=22, random_state=0)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,21 +735,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "palabras_codificadas = [[7,6,4,1],[13,10,2,20,18],[13,1,19,10,3],[12,18,21,6,20],\n",
-    "                      [23,6,13,6,7,18,16,18],[19,24,6,20,23,1],[19,1,16,23,1,14,1],\n",
-    "                      [11,10,15,6,16,1],[21,6,8,13,1],[2,10,14,6,23,6,20,1],\n",
-    "                      [3,1,19,1,23,18],[11,1,15,18,16],[12,10,18,22,12,18],\n",
-    "                      [2,1,13,18,16,3,6,22,23,18],[15,24,20,3,10,6,13,1,8,18],\n",
-    "                      [15,24,4,1,4,18],[1,9,10,11,1,5,18],[23,6,21,6,15,18,23,18],\n",
-    "                      [14,18,20,1,20],[6,22,19,1,16,23,1,19,1,11,1,20,18]]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -734,7 +743,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# orden segun como se leyeron los audios de la base de datos\n",
+    "palabras_codificadas = [[1,9,10,11,1,5,18], [2,1,13,18,16,3,6,22,23,18],[6,22,19,1,16,23,1,19,1,11,1,20,18],\n",
+    "                        [11,1,15,18,16],[12,10,18,22,12,18], [14,18,20,1,20],[15,24,4,1,4,18],[15,24,20,3,10,6,13,1,8,18],\n",
+    "                        [7,6,4,1], [2,10,14,6,23,6,20,1],[13,10,2,20,18],[13,1,19,10,3],[12,18,21,6,20],[23,6,13,6,7,18,16,18],\n",
+    "                        [19,24,6,20,23,1],[19,1,16,23,1,14,1],[11,10,15,6,16,1],[21,6,8,13,1],[23,6,21,6,15,18,23,18],[3,1,19,1,23,18]]  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +816,7 @@
        " 26: 0}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,53 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " 10,\n",
-       " 11,\n",
-       " 12,\n",
-       " 13,\n",
-       " 14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[f for f in dicc_countFon.keys()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,8 +871,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Obtención de los datos de la media y la desviación estandar para cada fonema."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agruparFonemas(lista_fonemas, palabras,dicc_fonemas, espectogramas):\n",
+    "    # lista_fonemas : lista de listas con los indices de cada fonema en una palabra.\n",
+    "    # palabras: lista de listas de fonemas codificados por palabra.\n",
+    "    # dicc_fonemas: diccionario con (codigo fonema, ocurrencia en todas la palbras).\n",
+    "    # espectogramas: lista de los espectogramas de las palabras.\n",
+    "    # Esta función retorna una lista de matrices en la cual cada matriz tiene las columnas \n",
+    "    # de un mismo fonema dada toas las palabras.\n",
+    "    cods_fonemas = [f for f in dicc_fonemas.keys() if dicc_fonemas[f] != 0 and f != 0]\n",
+    "    lista_matrices = []\n",
+    "    for f in cods_fonemas:\n",
+    "        #print(\"f: \", f)\n",
+    "        bandera = True\n",
+    "        for idx,palabra in enumerate(palabras):\n",
+    "            #print(\"palabra:\" , palabra)\n",
+    "            if f in palabra:\n",
+    "                indices = []\n",
+    "                for i in range(1,len(palabra)-1):\n",
+    "                    #print(\"i:\", i)\n",
+    "                    #print(\"palabra[i]\",palabra[i])\n",
+    "                    if f == palabra[i]:\n",
+    "                        indices.append(i-1)\n",
+    "                #print(\"indices: \" , indices)\n",
+    "                fonemas = lista_fonemas[idx]\n",
+    "                #print(\"fonemas: \", fonemas)\n",
+    "                espectograma = espectogramas[idx]\n",
+    "                for indice in indices:\n",
+    "                    fon = fonemas[indice]\n",
+    "                    colums_fonema = espectograma[:,fon]\n",
+    "                    if bandera:\n",
+    "                        matriz_fon = colums_fonema\n",
+    "                        bandera = False\n",
+    "                    else:    \n",
+    "                        matriz_fon = np.concatenate([matriz_fon,colums_fonema], axis = 1)\n",
+    "        lista_matrices.append(matriz_fon)\n",
+    "        #print(\"----------------------------\")\n",
+    "    return lista_matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrices_fonemas = agruparFonemas(fonemas, palabras_codificadas, dicc_countFon, Spectograms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMediaVarianza(matrices_fonemas):\n",
+    "    lista_medias = []\n",
+    "    lista_cov = []\n",
+    "    for matriz in matrices_fonemas:\n",
+    "        media = np.mean(matriz, axis = 0)\n",
+    "        cov_aux = np.cov(matriz, rowvar = False )\n",
+    "        lista_medias.append(media)\n",
+    "        lista_cov.append(cov_aux)\n",
+    "    return lista_medias, lista_cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medias, cov = getMediaVarianza(matrices_fonemas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preguntas alex\n",
+    "\n",
+    "1. El calculo de las medias y las covarianzas se hacen sumando filas o sumando columnas.\n",
+    "2. Como se hace para que las matrices de covarianzas sean definidas positivas.\n",
+    "3. Las redes hacen clustering o clasificación.\n",
+    "4. Que hacer en caso de que no funciones con las medias y varianzas manueales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_pos_def(x):\n",
+    "    return np.all(np.linalg.eigvals(x) > 0)\n",
+    "for i in cov2:\n",
+    "    print(is_pos_def(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +1051,7 @@
        "1.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,39 +1072,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = hmm.GaussianHMM(n_components=len(startprob), covariance_type=\"full\")\n",
     "model.startprob_ = startprob\n",
     "model.transmat_ = matrix_trans\n",
-    "model.means_ = modelo.means_\n",
-    "model.covars_ = modelo.covariances_"
+    "model.means_ = medias\n",
+    "model.covars_ = np.array(cov2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 118,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0,  0,  0,  0,  0,  0,  0, 18, 18, 12, 18, 18, 18,  2, 18, 18, 18,\n",
-       "       18, 18, 18,  5,  5, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18,  7,  7,\n",
-       "        7, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18,  2, 18,  3, 18,\n",
-       "        2,  2, 18,  2,  3, 18,  3,  3,  2, 18, 18, 18, 18, 18,  0,  0,  0,\n",
-       "       18,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "        0])"
+       "array([13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13, 13, 13, 13, 13, 13, 13,  8, 15, 11, 17, 22,  4, 21, 21, 11,  8,\n",
+       "        8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8, 13, 13,  2,\n",
+       "       13,  1, 11, 13, 13,  1, 11, 11, 11,  1, 11,  8, 21, 22, 11, 21, 21,\n",
+       "       21,  0, 21, 21,  0,  4,  4,  4,  4,  4,  4,  4,  4,  4,  8,  8,  8,\n",
+       "        8,  8,  8,  8, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "       13])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
