--- a/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
+++ b/Talleres/ASR Systems using HMM-20210216/Implementing a simple ASR using HMM.ipynb
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2034,27 +2034,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "# Si arroja verdadero es port que no es definida positiva\n",
     "def is_pos_def(x):\n",
-    "    return np.all(np.linalg.eigvals(x) > 0)\n",
-    "# for i in cov:\n",
-    "#     print(is_pos_def(i))"
+    "    #return np.any(np.linalg.eigvals(x) > 0)\n",
+    "    return np.any(np.linalg.eigvalsh(x) <= 0)\n",
+    "\n",
+    "for i in cov:\n",
+    "    print(is_pos_def(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "def repairCov(lista_cov,c):\n",
     "    nueva_cov = []\n",
     "    for matriz in lista_cov:\n",
-    "        #print(is_pos_def(matriz))\n",
-    "        if not is_pos_def(matriz):\n",
+    "        if is_pos_def(matriz):\n",
     "            nueva_matriz = matriz + np.eye(39) * c\n",
     "            nueva_cov.append(nueva_matriz)\n",
     "        else:\n",
@@ -2064,37 +2097,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cov_nueva = repairCov(cov,0.18)"
+    "cov_nueva = repairCov(cov,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "comparacion = cov_nueva[6] == cov[6]\n",
-    "comparacion.all()"
+    "for i in cov_nueva:\n",
+    "    print(is_pos_def(i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,66 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(cov_nueva)):\n",
-    "    print(is_pos_def(covarianza[i,:,:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    " print(is_pos_def(covarianza[7,:,:]))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2168,7 @@
        "(24, 39, 39)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2185,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2188,7 @@
        "(24, 39)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2218,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -2947,7 +2941,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2958,7 +2952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2978,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -2987,7 +2981,7 @@
        "1.0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2999,7 +2993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3008,74 +3002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#np.linalg.eig(covarianza[6,:,:])[0] < 1e-7\n",
-    "#np.linalg.eig(cov[6])[0]\n",
-    "not np.allclose(covarianza[7,:,:], covarianza[7,:,:].T) or np.any(np.linalg.eigvalsh(covarianza[7,:,:]) <= 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.04898922e-20,  3.25488109e-12,  6.03498057e-12,  1.24382999e-11,\n",
-       "        3.27811759e-11,  6.48566800e-11,  7.36008965e-11,  8.64791420e-11,\n",
-       "        1.63559582e-10,  2.00333862e-10,  2.38434670e-10,  2.69140542e-10,\n",
-       "        3.20911132e-10,  3.33239660e-10,  4.99041342e-10,  5.63630336e-10,\n",
-       "        7.75050791e-10,  9.20249228e-10,  1.03128300e-09,  1.02412485e-07,\n",
-       "        7.36410033e-06,  4.82211294e-05,  7.26557725e-05,  1.51637104e-04,\n",
-       "        3.72542276e-04,  6.07230332e-04,  1.05366748e-03,  4.21815209e-03,\n",
-       "        6.56068423e-01,  3.32021644e+00,  3.40924454e+00,  7.56541710e+00,\n",
-       "        3.63926093e+01,  2.88094746e+02,  6.43622871e+02,  9.97432862e+02,\n",
-       "        2.05398717e+03,  2.54346991e+05,  8.58053348e+06])"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.eigvalsh(covarianza[7,:,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "component 7 of 'full' covars must be symmetric, positive-definite",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-150-1194dab7145c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransmat_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatrix_trans\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeans_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmedias_nuevas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcovars_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcovarianza\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\Proyecto1_NLP\\lib\\site-packages\\hmmlearn\\hmm.py\u001b[0m in \u001b[0;36mcovars_\u001b[1;34m(self, covars)\u001b[0m\n\u001b[0;32m    180\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mcovars_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcovars\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[0mcovars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcovars\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 182\u001b[1;33m         _utils._validate_covars(covars, self.covariance_type,\n\u001b[0m\u001b[0;32m    183\u001b[0m                                 self.n_components)\n\u001b[0;32m    184\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_covars_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcovars\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\Proyecto1_NLP\\lib\\site-packages\\hmmlearn\\_utils.py\u001b[0m in \u001b[0;36m_validate_covars\u001b[1;34m(covars, covariance_type, n_components)\u001b[0m\n\u001b[0;32m     37\u001b[0m             if (not np.allclose(cv, cv.T)\n\u001b[0;32m     38\u001b[0m                     or np.any(linalg.eigvalsh(cv) <= 0)):\n\u001b[1;32m---> 39\u001b[1;33m                 raise ValueError(\"component %d of 'full' covars must be \"\n\u001b[0m\u001b[0;32m     40\u001b[0m                                  \"symmetric, positive-definite\" % n)\n\u001b[0;32m     41\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: component 7 of 'full' covars must be symmetric, positive-definite"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = hmm.GaussianHMM(n_components=len(startprob), covariance_type=\"full\")\n",
     "model.startprob_ = startprob\n",
@@ -3086,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 223,
    "metadata": {
     "scrolled": true
    },
@@ -3094,19 +3023,26 @@
     {
      "data": {
       "text/plain": [
-       "array([19, 16, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,  1, 16, 16, 16, 16,\n",
-       "       16, 21, 16, 16,  1,  1,  1,  1,  0,  0,  0,  0, 12, 12, 12, 12, 16,\n",
-       "       16, 16, 16, 15, 15, 15, 15,  2,  2,  2,  5,  5,  5, 16, 19, 20, 21,\n",
-       "       21, 21, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16])"
+       "array([10, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14,\n",
+       "       14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14,\n",
+       "       18, 10, 10, 18, 10, 10, 18, 10, 10, 14, 10, 14, 10, 14, 18, 16, 10,\n",
+       "       16, 16, 18, 16, 10, 16, 18, 16, 16, 10, 18, 10, 16, 10, 18, 10, 18,\n",
+       "       10, 10, 18, 16, 10, 10, 18, 18, 10,  1,  1,  1, 18,  1,  1, 18,  1,\n",
+       "       10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 16, 10, 10, 10, 10,\n",
+       "       10, 10, 10, 18, 10, 18, 18, 11, 11, 10, 11, 18,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5, 18, 10,\n",
+       "       10, 10, 18, 18, 16, 18, 18, 10, 18, 18, 18, 18, 16, 18, 18, 10, 18,\n",
+       "       10, 10, 10, 10, 18, 16, 10, 10, 10, 10, 10, 10, 18, 18, 18, 10, 10,\n",
+       "       14])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(Spectograms[1].T)"
+    "model.predict(Spectograms[0].T)"
    ]
   },
   {
